Major update update: Fixes a bug related to reading csv files.
Backlog Added. Waiting for Service can be calculated -> Backlog - waiting for parts.
Checkbox Collection deployment swaps separated for 3PL and in house worker
 Save check box preferences to json instead yaml
 Resolves an issue related to GMV coming from passes in a closed / paused city, and the program returned an error.
 Resolves an issue when user tried to load user data from a different user causing the program to collapse. It notifies the user and prevents loading data from other user. (city list are interchangeable)

--- a/history.html
+++ b/history.html
@@ -23,6 +23,19 @@
 
 <p><strong>Development history.</strong></p>
 
+<p><strong>v2.1.7</strong></p>
+<ul>
+    <li> Backlog Added. Waiting for Service can be calculated -> Backlog - waiting for parts.</li>
+    <li> Checkbox Collection deployment swaps separated for 3PL and in house worker </li>
+    <li> Save check box preferences to json instead yaml.</li>
+    <li> Resolves an issue related to GMV coming from passes in a closed / paused city, and the program returned an error. </li>
+    <li> Resolves an issue when user tried to load user data from a different user causing the program to collapse.
+         It notifies the user and prevents loading data from other user. (city list are interchangeable)</li>
+
+</ul>
+
+
+
 <p><strong>v2.1.6</strong></p>
 <ul>
     <li> Issue fixed relating to launching issues, caused by inappropriate loading of csv.</li>
