Major update update: v2.1.8 - Changelog: Refined Waiting for parts calculation taken from cloud data. Backlog per inventory site locally calculated based on a dictionary of Intenory site and the corresponding cities. Vehicle inflow and outflow is automated per city per vehcile model.
v2.1.7 - Changelog:
Fixes a bug related to reading csv files.

Backlog Added. Waiting for Service can be calculated -> Backlog - waiting for parts.
Checkbox Collection deployment swaps separated for 3PL and in house worker
 Save check box preferences to json instead yaml
 Resolves an issue related to GMV coming from passes in a closed / paused city, and the program returned an error.
 Resolves an issue when user tried to load user data from a different user causing the program to collapse. It notifies the user and prevents loading data from other user. (city list are interchangeable)

--- a/history.html
+++ b/history.html
@@ -7,7 +7,7 @@
 <basefont color="black">
 <body>
 
-<p>Made with Love in Oslo, Norway.</p>
+<p>Made with <3 in Oslo, Norway.</p>
 <p><i>“Why Join the navy if you can be a pirate?”</i></p>
 <p><i>“Real artists ship.”</i></p>
 <p><i>“Stay hungry, stay foolish.”</i></p>
@@ -18,10 +18,28 @@
 <p><i>“I skate to where the puck is going to be, not where it has been.”</i></p>
 <p><i>“As is a tale, so is life: not how long it is, but how good it is, is what matters.”</i></p>
 <p><i>“The trials you encounter will introduce you to your strengths.”</i></p>
+<p><i>“Don't go where the path may lead, go instead where there's no path, and leave a trail.”</i></p>
+<p><i>“Whenever you find yourself on the side of the majority, it is time to reform (or pause and reflect).”</i></p>
+<p><i>“The Fates guide the person who accepts them and hinder the person who resists them.”</i></p>
 
 
 
 <p><strong>Development history.</strong></p>
+
+<p><strong>v2.1.8</strong></p>
+<ul>
+    <li> Changes related to backlog calculation.</li>
+    <li> Waiting for parts is taken from the actual waiting from parts automation tool. </li>
+    <li> Total backlog is aggregated by inventory sites.</li>
+    <li> Vehicle inflow and vehicle outflow: per city per vehicle model.</li>
+    <li> Check whether cities in the city list are in the Revamped dictionary (inventory site mapping).</li>
+    <li> Check whether cities in the city list are updated by the inventory automation tool prior user launches the updating procedure.</li>
+    <li> Display error message to the user if the mentioned two cases are false.</li>
+
+<p> <i>  Date: June 21st 2023 </i></p>
+</ul>
+
+
 
 <p><strong>v2.1.7</strong></p>
 <ul>
@@ -31,6 +49,8 @@
     <li> Resolves an issue related to GMV coming from passes in a closed / paused city, and the program returned an error. </li>
     <li> Resolves an issue when user tried to load user data from a different user causing the program to collapse.
          It notifies the user and prevents loading data from other user. (city list are interchangeable)</li>
+
+    <p> <i>  Date: February 20th 2023 </i></p>
 
 </ul>
 
