--- a/history.html
+++ b/history.html
@@ -21,10 +21,22 @@
 <p><i>“Don't go where the path may lead, go instead where there's no path, and leave a trail.”</i></p>
 <p><i>“Whenever you find yourself on the side of the majority, it is time to reform (or pause and reflect).”</i></p>
 <p><i>“The Fates guide the person who accepts them and hinder the person who resists them.”</i></p>
+<p><i>Have the courage to follow your heart and intuition. They somehow know what you truly want to become</i></p>
+<p><i>“Happiness is when what you think, what you say, and what you do are in harmony.”</i></p>
 
 
 
 <p><strong>Development history.</strong></p>
+
+<p><strong>v2.2.0</strong></p>
+<ul>
+    <li> Switch from charger events to completed tasks related to tasks completed. </li>
+    <li> UTF-8 support for Waiting for parts. </li>
+    <li> Rebalance tasks automation.</li>
+
+<p> <i>  Date: Aug 16th 2023 </i></p>
+</ul>
+
 
 <p><strong>v2.1.8</strong></p>
 <ul>
