--- a/history.html
+++ b/history.html
@@ -28,6 +28,16 @@
 
 <p><strong>Development history.</strong></p>
 
+<p><strong>v2.2.1</strong></p>
+<ul>
+    <li>Removes unnecessary calls of function Prgeen, that were left in v2.2.0 and used for debugging purposes. </li>
+    <li>Unnecessary calls invoked broken pipe error, which caused past release to freeze.  </li>
+
+
+<p> <i>  Date: Sept 19th 2023 </i></p>
+</ul>
+
+
 <p><strong>v2.2.0</strong></p>
 <ul>
     <li> Switch from charger events to completed tasks related to tasks completed. </li>
